The last bug fix reintroduced the bug with multiple named PWR parameters as a result of z-index changes to the modal overlay with dialogs.  This was due to the fact that the module errors dialog never got refactored to create its dialog widget through the standard dialog method.  This has been fixed and both bugs should now be fixed, with dialogs working appropriately.
git-svn-id: https://svn.broadinstitute.org/genepattern/trunk@10660 48a7a3f7-ad46-0410-b969-29950918272e

--- a/website/pipeline/styles/pipelines.css
+++ b/website/pipeline/styles/pipelines.css
@@ -515,7 +515,7 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 }
 
 .ui-dialog {
-	z-index: 10001 !important;
+	z-index: 10001;
 }
 
 .top-dialog {
